package com.example.template.seat;

public record SeatDto(String id, String row, int col, String status, String type) {
}
